--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "typescript": "~5.8.3",
     "vite": "^7.1.6"
+  },
+  "dependencies": {
+    "wavesurfer.js": "^7.10.1"
   }
 }
