--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "concurrently": "^9.2.1",
+    "http-server": "^14.1.1",
     "typescript": "~5.8.3",
     "vite": "^7.1.6"
   },
