MAJOR FIX: Resolve audio streaming to Shoutcast - player audio now works!
 Fixed core issue: Player deck audio not reaching stream (only microphone worked)
 Solved Cross-Origin problems that caused audio silence
 Implemented unified server architecture for same-origin requests

Key Changes:
-  Fixed JavaScript function scoping: moved connectAudioToMixer & initializeAudioMixing to file top
-  Created unified-server.js: Web server + CORS proxy + Harbor stream on same port (5173)
-  Updated URLs to use same-origin API routes (/api/navidrome-stream, /api/navidrome-cover)
-  Direct debug connection: sourceNode  streamGainNode bypasses crossfader issues
-  Enhanced Range request handling for WaveSurfer compatibility
-  Volume meters implemented with AnalyserNode for visual feedback

Technical Details:
- Browser no longer shows HTMLMediaElement has cross-origin resource, output silence
- Function hoisting issues resolved: audio functions available when event listeners fire
- MediaElementAudioSourceNode properly connects to Web Audio API mixing pipeline
- Harbor TCP streaming works through same-origin /api/stream endpoint

Result: DJ can now stream music from Navidrome players to Shoutcast/Liquidsoap!

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,7 @@ services:
         VITE_UNIFIED_USERNAME: ${VITE_UNIFIED_USERNAME}
         VITE_UNIFIED_PASSWORD: ${VITE_UNIFIED_PASSWORD}
     ports:
-      - "5173:5173"  # Web interface
-      - "8082:8082"  # CORS proxy
+      - "5173:5173"  # Unified server (Web interface + CORS proxy + Harbor stream)
     environment:
       # Runtime-Umgebungsvariablen für den CORS-Proxy
       - STREAM_USERNAME=${STREAM_USERNAME:-test}
