--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "webdj",
+  "name": "subcaster",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "license": "SEE LICENSE IN LICENSE",
+  "author": "Felix Pielok",
+  "description": "Professional streaming and podcasting software with mixing capabilities",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
