Refactor Navidrome API Client to OpenSubsonic API Client
- Renamed interfaces and classes from Navidrome to OpenSubsonic for consistency.
- Updated authentication and request methods to reflect OpenSubsonic API.
- Changed CSS class names for login styles from .navidrome-login to .opensubsonic-login.
- Modified environment variables in vite-env.d.ts to use OpenSubsonic naming conventions.
- Updated server routes in unified-server.js for OpenSubsonic stream and cover art proxies.

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -12,11 +12,11 @@ STREAM_SERVER=your.streaming.server
 STREAM_PORT=8015
 STREAM_MOUNT=/
 
-# Navidrome Configuration (wird in das Frontend eingebaut)
+# OpenSubsonic Configuration (wird in das Frontend eingebaut)
 # Diese Felder werden automatisch im Login-Formular vorausgefüllt
-VITE_NAVIDROME_URL=https://your.navidrome.server
-VITE_NAVIDROME_USERNAME=your_navidrome_username
-VITE_NAVIDROME_PASSWORD=your_navidrome_password
+VITE_OPENSUBSONIC_URL=https://your.OpenSubsonic.server
+VITE_OPENSUBSONIC_USERNAME=your_OpenSubsonic_username
+VITE_OPENSUBSONIC_PASSWORD=your_OpenSubsonic_password
 
 # Unified Login Option (optional)
 # Wenn auf 'true' gesetzt, werden die gleichen Credentials für beide Services verwendet
