--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-VITE_NAVIDROME_URL=https://your-navidrome-server.com
-VITE_NAVIDROME_USERNAME=your-username
-VITE_NAVIDROME_PASSWORD=your-password
+VITE_OPENSUBSONIC_URL=https://your-OPENSUBSONIC-server.com
+VITE_OPENSUBSONIC_USERNAME=your-username
+VITE_OPENSUBSONIC_PASSWORD=your-password
