--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "vite": "^7.1.6"
   },
   "dependencies": {
+    "@types/three": "^0.180.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "http-proxy-middleware": "^3.0.5",
     "node-fetch": "^3.3.2",
+    "three": "^0.180.0",
     "wavesurfer.js": "^7.10.1",
     "ws": "^8.18.3"
   }
