--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "electron/main.js",
+  "homepage": "./",
   "license": "SEE LICENSE IN LICENSE",
   "author": "Felix Pielok",
   "description": "Professional streaming and podcasting software with mixing capabilities",
@@ -10,17 +12,28 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "start:all": "concurrently \"npm run start:proxy\" \"npm run start:signaling\" \"npm run start:bridge\" \"npm run dev\"",
-    "start:proxy": "node proxy-server.js",
-    "start:signaling": "node webrtc-signaling-server.js",
-    "start:bridge": "node webrtc-shoutcast-bridge-tcp.js",
-    "start:services": "concurrently \"npm run start:proxy\" \"npm run start:signaling\" \"npm run start:bridge\""
+    "start:all": "concurrently \"npm run start:unified\" \"npm run dev\"",
+    "start:unified": "node unified-server.js",
+    "electron": "electron .",
+    "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && electron .\"",
+    "build:web": "tsc && vite build",
+    "build:electron": "tsc -p electron/tsconfig.json",
+    "build:desktop": "npm run build:web && electron-builder",
+    "build:desktop:win": "npm run build:web && electron-builder --win",
+    "build:desktop:mac": "npm run build:web && electron-builder --mac",
+    "build:desktop:linux": "npm run build:web && electron-builder --linux",
+    "build:all": "npm run build:web && npm run build:desktop",
+    "postinstall": "electron-builder install-app-deps"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
     "concurrently": "^9.2.1",
+    "electron": "^33.0.0",
+    "electron-builder": "^25.0.0",
     "http-server": "^14.1.1",
     "typescript": "~5.8.3",
-    "vite": "^7.1.6"
+    "vite": "^7.1.6",
+    "wait-on": "^8.0.0"
   },
   "dependencies": {
     "@types/three": "^0.180.0",
