Fix OpenSubsonic login race condition and implement AzuraCast multi-server integration
- Add login state tracking (isOpenSubsonicLoggedIn, autoLoginInProgress)
- Fix timing issue where 'Login Required' appears before auto-login completes
- Add proper error handling and state reset in login functions
- Implement button state flow: SELECT_STATION -> START_STREAMING -> STREAMING_ACTIVE
- Add multi-server AzuraCast support with comma-separated URLs
- Integrate countdown protection with button state reset
- Remove duplicate dropdown UI elements
- Update .gitignore to exclude azuracast/ and compare/ directories

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Felix Pielok",
   "description": "Professional streaming and podcasting software with mixing capabilities",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"npm run start:unified\" \"vite\"",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "start:all": "concurrently \"npm run start:unified\" \"npm run dev\"",
