feat: Complete Hausaufgaben playlist integration and production deployment
- Implemented Hausaufgaben playlist API (OpenSubsonicPlaylist interface)
- Added playlist methods to opensubsonic.ts and navidrome.ts
- Integrated playlist as first element in Library Browser
- Server-specific feature only for musik.radio-endstation.de
- Custom playlist UI with school icon and special styling
- Removed image cache system (simplified direct loading)
- Fixed album card display and artist image loading
- Added robust production scripts with auto-restart
- Created production deployment packager
- Complete production-ready deployment in 17 files (~1.33MB)

Production features:
- Auto-restart on crash (configurable max attempts)
- Comprehensive logging to production.log
- PID management and graceful shutdown
- Production-optimized package.json
- Environment templates and deployment docs
- Clean production directory with only runtime files

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "preview": "vite preview",
     "start:all": "concurrently \"npm run start:unified\" \"npm run dev\"",
     "start:unified": "node unified-server.js",
+    "start:production": "node start-production.js",
+    "stop:production": "node stop-production.js",
+    "deploy:production": "node create-production-deployment.js",
     "electron": "electron .",
     "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && electron .\"",
     "build:web": "tsc && vite build",
